# PerfGraph

./: .gitignore  README.md  pyproject.toml
observability/: prometheus.yml
observability/grafana/: dashboard.json
scripts/: grafana_datasource.sh
src/: generator.sh
src/perfgraph/: __init__.py  algorithms.py  app.py  metrics_helper.py
src/perfgraph/static/: style.css
